# diogo

./: 404.html  access-interno.html  access.html  alert.html  ambiente.html  confPutty.html  configAmbienteCobol.html  extras.html  levantamentoImpacto.html  migracaoSO.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  testeBasico.html
.github/workflows/: main.yml
.history/: mkdocs_20230531162955.yml  mkdocs_20230531180246.yml  mkdocs_20230705215151.yml
.history/docs/: access-interno_20230522045436.md  access-interno_20230531180701.md  access-interno_20230531180807.md  access-interno_20230531180905.md  access-interno_20230531180907.md  access-interno_20230531181631.md  alertImplant_20230705215444.md  alertImplant_20230705215620.md  alertImplant_20230705220149.md  alertImplant_20230705220259.md  alertImplant_20230705220848.md  alertImplant_20230705221014.md  confPutty_20230703181359.md  confPutty_20230703181459.md  confPutty_20230703181525.md  confPutty_20230703181543.md  confPutty_20230703181610.md  confPutty_20230703181619.md  confPutty_20230703181627.md  (+6 more)
docs/: access.md  alert.md  alertImplant.md  extras.md  migracaoSO.md  testeBasico.md
downloads/: animcbl  compila.sh  compilaGeral.sh  configPuTTY.reg  mf.sh  pesqarq.cbl  pesqarq.cpy  pesqarq.sel  rebuildGeral.sh  verArq.cbl  verCallSystem.sh
old/: README.md
search/: search_index.json
site/: 404.html  access-interno.html  access.html  alert.html  alertImplant.html  ambiente.html  confPutty.html  configAmbienteCobol.html  index.html  levantamentoImpacto.html  migracaoSO.html  testeBasico.html
(+18 files in other folders)
